<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_title">PixelDustSettings</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="disabled">Disabled</string>
    <string name="none_string">None</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="gestures_category">Gestures</string>
    <string name="icons_category">Icons</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="navigation_and_recents_category">Navigation</string>
    <string name="build_tweaks_summary_title">Dustify your device!</string>
    <string name="listview">ListView</string>
    <string name="buttons_title">Buttons</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="general_category">General</string>
    <string name="about_title">About PixelDust</string>
    <string name="pixeldust_website_title">Website</string>
    <string name="pixeldust_website_summary">Visit our official website</string>
    <string name="crew_title">PixelDust crew</string>
    <string name="pixeldust_crew_title">Our crew</string>
    <string name="pixeldust_crew_summary">Find out who we are</string>
    <string name="join_crew_title">Would you like to join?</string>
    <string name="join_crew_summary">Find out how to apply to us</string>
    <string name="donate_pixeldust_title">Support us</string>
    <string name="donate_pixeldust_summary">Donate to support further development</string>
    <string name="pixeldust_source_title">GitHub</string>
    <string name="pixeldust_source_summary">We love open source, check us out</string>
    <string name="pixeldust_telegram_title">Discussions group</string>
    <string name="pixeldust_telegram_summary">We are on telegram. Join us!</string>
    <string name="pixeldust_telegram_channel_title">News channel</string>
    <string name="pixeldust_telegram_channel_summary">Get notified of new builds on Telegram</string>
    <string name="pixeldust_changelog_title">Current changelog</string>
    <string name="pixeldust_changelog_summary">View changes in the ROM installed</string>
    <string name="pixeldust_changelog_error">Unable to load changelog</string>
    <string name="misc_extensions_title">Miscellaneous</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="lockscreen_shortcuts">Lockscreen Shortcuts</string>
    <string name="lockscreen_general_title">Lockscreen General</string>
    <string name="navigationbar_settings_title">Navigation Bar</string>
    <string name="statusbar_items_category">Statusbar Items</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="customisation_title">Customisation</string>
    <string name="settings_dialog_title">Help us help you!</string>
    <string name="settings_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="settings_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="monet_category">Monet</string>
    <string name="monet_engine_title">Monet Engine</string>
    <string name="monet_engine_summary">Customise monet parameters</string>
    <string name="monet_engine_custom_color_title">Use custom color</string>
    <string name="monet_engine_custom_color_summary">Use custom color for monet engine instead of wallpaper colors</string>
    <string name="monet_engine_color_override_title">Custom color</string>
    <string name="monet_engine_white_luminance_user_title">White luminance</string>
    <string name="monet_engine_accurate_shades_title">Use accurate shades</string>
    <string name="monet_engine_chroma_factor_title">Chroma factor</string>
    <string name="monet_engine_linear_lightness_title">Use linear lightness</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_advanced">Advanced reboot options</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="powermenu_logout">Logout</string>
    <string name="powermenu_emergency">Emergency</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery, bootloader and fastboot</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double-tap on lockscreen to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>
    <string name="three_finger_gesture_title">Swipe to screenshot</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="torch_power_button_gesture_title">Toggle torch when screen off</string>
    <string name="torch_power_button_gesture_none">Disabled</string>
    <string name="torch_power_button_gesture_dt">Double tap power button (slower single tap response), Disables double power tap for camera.</string>
    <string name="torch_power_button_gesture_dt_toast">Jump to camera gesture is now disabled</string>
    <string name="torch_power_button_gesture_lp">Long press power button</string>
    <string name="volume_category">Volume Rocker</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="fprint_sucess_vib_title">Fingerprint success vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on failed fingerprint authentication</string>
    <string name="carrier_label_settings_title">Carrier label</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="status_bar_clock_title">Clock &amp; Date Settings</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="ambient_ui">Ambient/Always on display</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="qs_show_battery_estimate_title">Battery estimates</string>
    <string name="qs_show_battery_estimate_summary">Show estimated remaining battery life next to the icon</string>
    <string name="pulse_category">Pulse music visualizer</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio graphic equalizer for navigation bar and lockscreen</string>
    <string name="animation_category">Animations</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="enable_fingerprint_ripple_effect_title">Ripple effect</string>
    <string name="enable_fingerprint_ripple_effect_summary">Show ripple effect on unlock with fingerprint</string>
    <string name="location_privacy_indicator_title">Location access indicator</string>
    <string name="location_privacy_indicator_summary_on">Show location in the privacy chip</string>
    <string name="location_privacy_indicator_summary_off">Show location in status bar icons</string>
    <string name="combined_status_bar_signal_icons_title">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Show single combined icon for WiFi and mobile signal</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
    <string name="volte_vowifi_override_title">VoWiFi override</string>
    <string name="volte_vowifi_override_summary">Hide VoLTE when VoWiFi is available</string>
    <string name="qs_columns_category">QS tile layout and column settings</string>
    <string name="qs_columns_portrait_title">QS columns in portrait</string>
    <string name="qs_columns_landscape_title">QS columns in landscape</string>
    <string name="qs_tile_vertical_layout_title">QS vertical layout</string>
    <string name="qs_tile_vertical_layout_summary">Enable tile vertical layout</string>
    <string name="qs_tile_title_visibility_title">Hide titles</string>
    <string name="qs_tile_title_visibility_summary">Enable to hide QS tile titles</string>
    <string name="qs_transparency_title">Background transparency</string>
    <string name="qs_transparency_summary">Set transparency level for QS background</string>
    <string name="media_category">Media notification</string>
    <string name="artwork_media_background_title">Artwork media background</string>
    <string name="artwork_media_background_summary">Set media artwork as the notification media background</string>
    <string name="artwork_media_background_enable_blur_title">Blur media media artwork background</string>
    <string name="artwork_media_background_blur_radius_title">Blur amount for media artwork</string>
    <string name="artwork_media_background_fade_filter_title">Fade amount for media artwork</string>
    <string name="artwork_media_background_alpha_title">Transparency of media artwork</string>
</resources>