<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 The PixelDust Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misc_extensions_title">

    <PreferenceCategory
        android:key="misc_extensions_icons_category"
        android:title="@string/icons_category">

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="combined_status_bar_signal_icons"
            android:title="@string/combined_status_bar_signal_icons_title"
            android:summary="@string/combined_status_bar_signal_icons_summary"
            android:defaultValue="false"/>

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="roaming_indicator_icon"
            android:title="@string/roaming_indicator_icon_title"
            android:summary="@string/roaming_indicator_icon_summary"
            android:defaultValue="true"/>

        <com.pixeldust.support.preference.SecureSettingSwitchPreference
            android:key="enable_location_privacy_indicator"
            android:title="@string/location_privacy_indicator_title"
            android:summaryOn="@string/location_privacy_indicator_summary_on"
            android:summaryOff="@string/location_privacy_indicator_summary_off"
            android:defaultValue="true" />

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="volte_icon_style"
            android:title="@string/volte_icon_title"
            android:summary="@string/volte_icon_summary"
            android:defaultValue="0"
            settings:defaultValueText="@string/disabled"
            android:max="9"
            settings:min="0"
            settings:units="" />

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="vowifi_icon_style"
            android:title="@string/vowifi_icon_title"
            android:summary="@string/vowifi_icon_summary"
            android:defaultValue="0"
            settings:defaultValueText="@string/disabled"
            android:max="8"
            settings:min="0"
            settings:units="" />

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="volte_vowifi_override"
            android:title="@string/volte_vowifi_override_title"
            android:summary="@string/volte_vowifi_override_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc_extensions_gestures_category"
        android:title="@string/gestures_category">

     <com.pixeldust.support.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
        android:title="@string/double_tap_to_sleep_title"
        android:summary="@string/double_tap_to_sleep_summary"
        android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
