<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2021 The PixelDust Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/about_title">

    <!-- PixelDust Changelog -->
    <Preference
        android:key="pixeldust_changelog"
        android:icon="@drawable/ic_changelog"
        android:title="@string/pixeldust_changelog_title"
        android:summary="@string/pixeldust_changelog_summary">
        <intent android:action="android.intent.action.MAIN"
             android:targetPackage="com.android.settings"
             android:targetClass="com.pixeldust.settings.fragments.ChangelogActivity"/>
    </Preference>

    <!-- PixelDust Downloads -->
    <Preference
        android:key="pixeldust_website"
        android:icon="@drawable/ic_web"
        android:title="@string/pixeldust_website_title"
        android:summary="@string/pixeldust_website_summary" />

    <!-- PixelDust Crew -->
    <Preference
        android:key="pixeldust_crew"
        android:icon="@drawable/ic_crew"
        android:title="@string/pixeldust_crew_title"
        android:summary="@string/pixeldust_crew_summary"
        android:fragment="com.pixeldust.settings.fragments.Crew" />

    <!-- PixelDust Donate -->
    <Preference
        android:key="pixeldust_donate"
        android:icon="@drawable/ic_donate"
        android:title="@string/donate_pixeldust_title"
        android:summary="@string/donate_pixeldust_summary" />

    <!-- PixelDust Source -->
    <Preference
        android:key="pixeldust_source"
        android:icon="@drawable/ic_source"
        android:title="@string/pixeldust_source_title"
        android:summary="@string/pixeldust_source_summary" />

    <!-- PixelDust Telegram -->
    <Preference
        android:key="pixeldust_telegram"
        android:icon="@drawable/ic_telegram"
        android:title="@string/pixeldust_telegram_title"
        android:summary="@string/pixeldust_telegram_summary" />

    <!-- PixelDust Telegram Updates Channel -->
    <Preference
        android:key="pixeldust_telegram_channel"
        android:icon="@drawable/ic_telegram_channel"
        android:title="@string/pixeldust_telegram_channel_title"
        android:summary="@string/pixeldust_telegram_channel_summary" />

</PreferenceScreen>
