<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 The PixelDust Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quick_settings_title">

     <PreferenceCategory
        android:key="quick_settings_general_category"
        android:title="@string/general_category">

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="qs_transparency"
            android:title="@string/qs_transparency_title"
            android:summary="@string/qs_transparency_summary"
            android:defaultValue="100"
            settings:interval="1"
            settings:units="%"
            android:max="100"
            settings:min="1" />

        <ListPreference
            android:key="status_bar_quick_qs_pulldown"
            android:title="@string/status_bar_quick_qs_pulldown"
            android:entries="@array/quick_pulldown_entries"
            android:entryValues="@array/quick_pulldown_values"
            android:defaultValue="0" />

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="qs_show_battery_estimate"
            android:title="@string/qs_show_battery_estimate_title"
            android:summary="@string/qs_show_battery_estimate_summary"
            android:defaultValue="true"/>

        <com.pixeldust.support.preference.SecureSettingSwitchPreference
            android:key="quick_settings_vibrate"
            android:title="@string/quick_settings_vibrate_title"
            android:summary="@string/quick_settings_vibrate_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_columns_category"
        android:title="@string/qs_columns_category">

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="qs_layout_columns"
            android:title="@string/qs_columns_portrait_title"
            android:max="6"
            settings:min="2"
            settings:interval="1"
            android:defaultValue="2"
            settings:units="" />

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="qs_layout_columns_landscape"
            android:title="@string/qs_columns_landscape_title"
            android:max="6"
            settings:min="4"
            settings:interval="1"
            android:defaultValue="4"
            settings:units="" />

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="qs_tile_vertical_layout"
            android:title="@string/qs_tile_vertical_layout_title"
            android:summary="@string/qs_tile_vertical_layout_summary"
            android:defaultValue="false" />

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="qs_tile_label_hide"
            android:title="@string/qs_tile_title_visibility_title"
            android:summary="@string/qs_tile_title_visibility_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/media_category">

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="artwork_media_background"
            android:title="@string/artwork_media_background_title"
            android:summary="@string/artwork_media_background_summary"
            android:defaultValue="false" />

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="artwork_media_background_fade_percent"
            android:title="@string/artwork_media_background_fade_filter_title"
            android:dependency="artwork_media_background"
            android:defaultValue="30"
            android:max="50"
            settings:min="1" />

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="artwork_media_background_alpha"
            android:title="@string/artwork_media_background_alpha_title"
            android:dependency="artwork_media_background"
            android:defaultValue="255"
            android:max="255"
            settings:min="0" />

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="artwork_media_background_enable_blur"
            android:title="@string/artwork_media_background_enable_blur_title"
            android:dependency="artwork_media_background"
            android:defaultValue="false" />

        <com.pixeldust.support.preference.SystemSettingSeekBarPreference
            android:key="artwork_media_background_blur_radius"
            android:title="@string/artwork_media_background_blur_radius_title"
            android:dependency="artwork_media_background_enable_blur"
            android:defaultValue="1"
            android:max="25"
            settings:min="1" />

    </PreferenceCategory>

</PreferenceScreen>
