<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2022 The PixelDust Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_general_title">

    <PreferenceCategory
        android:key="lockscreen_finterprint_category"
        android:title="@string/fingerprint_category">

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="enable_ripple_effect"
            android:title="@string/enable_fingerprint_ripple_effect_title"
            android:summary="@string/enable_fingerprint_ripple_effect_summary"
            android:defaultValue="false" />

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:persistent="true" />

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="fingerprint_error_vib"
            android:title="@string/fprint_error_vib_title"
            android:summary="@string/fprint_error_vib_summary"
            android:persistent="true" />

    </PreferenceCategory>

</PreferenceScreen>
