<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2021-2022 The PixelDust Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/general_tweaks_title">

    <!--PreferenceCategory
        android:key="general_tweaks_general_category"
        android:title="@string/general_category">
    </PreferenceCategory-->

    <PreferenceCategory
        android:key="gestures_category"
        android:title="@string/gestures_category" >

        <com.pixeldust.support.preference.SystemSettingSwitchPreference
            android:key="three_finger_gesture"
            android:title="@string/three_finger_gesture"
            android:summary="@string/three_finger_gesture_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pulse_category"
        android:title="@string/pulse_category">

    <Preference
        android:key="pulse_settings"
        android:title="@string/pulse_settings"
        android:summary="@string/pulse_settings_summary"
        android:fragment="com.pixeldust.settings.fragments.PulseSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="animation_category"
        android:title="@string/animation_category">

        <com.pixeldust.support.preference.SystemSettingListPreference
            android:key="screen_off_animation"
            android:title="@string/screen_off_animation_title"
            android:entries="@array/screen_off_animation_entries"
            android:entryValues="@array/screen_off_animation_values"
            android:summary="%s"
            android:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>
