<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2021 The PixelDust Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.pixeldust.support.preference.CardviewPreference
         android:key="lockscreen_general"
         android:fragment="com.pixeldust.settings.fragments.LockscreenGeneral"
         android:icon="@drawable/ic_general_tweaks"
         android:title="@string/lockscreen_general_title" />

    <com.pixeldust.support.preference.CardviewPreference
         android:key="lockscreen_ui"
         android:fragment="com.pixeldust.settings.fragments.LockscreenUI"
         android:icon="@drawable/ic_lockscreen_ui"
         android:title="@string/lockscreen_ui_title" />

    <com.pixeldust.support.preference.CardviewPreference
        android:key="lockscreen_shortcuts"
        android:icon="@drawable/ic_lockscreen_shortcuts"
        android:title="@string/lockscreen_shortcuts" >
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
    </com.pixeldust.support.preference.CardviewPreference>

    <com.pixeldust.support.preference.CardviewPreference
        android:key="ambient_ui"
        android:fragment="com.pixeldust.settings.fragments.AmbientUI"
        android:icon="@drawable/ic_aod"
        android:title="@string/ambient_ui" />

</PreferenceScreen>

